tests/error/TestIndexTooBig.java
class TestIndex{
    public static void main(String[] a){
        int[] tab;
        tab = new int[3];
        // Fails because index is too big
        tab[5] = 7;
    }
}
